--- a/css/styles.css
+++ b/css/styles.css
@@ -641,11 +641,12 @@ header button:hover {
   margin: 0;
   -webkit-transform: translate(-50%, 0);
           transform: translate(-50%, 0);
-  width: 80%;
+  width: 100%;
 }
 
 .overlay .body header button {
   padding: 0;
+  z-index: 100;
 }
 
 .overlay .body .hint {
