--- a/css/styles.scss
+++ b/css/styles.scss
@@ -18,6 +18,7 @@
   --message: #eee;
   --message-success: #bfc;
   --message-error: #fdb;
+  --message-error-text: rgb(179, 15, 0);
 
   --button-gray: #ccc;
   --button-danger: #aaa;
@@ -546,6 +547,7 @@ background-color: var(--button-primary);
       }
 
       &.error {
+        color: var(--message-error-text);
         background-color: var(--message-error);
       }
 
