--- a/css/styles.css
+++ b/css/styles.css
@@ -701,7 +701,7 @@ header button:hover {
 .graph-vertical-container {
   margin: 1rem 0 0;
   display: flex;
-  height: 5rem;
+  height: 6rem;
   padding-top: 1rem;
   align-items: stretch;
   justify-content: space-between;
@@ -721,12 +721,16 @@ header button:hover {
 .graph-vertical-container .graph-vertical .bar-container {
   flex: 1;
   display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+  align-items: end;
 }
 .graph-vertical-container .graph-vertical .bar-container .bar {
+  flex: 1 1 auto;
   position: relative;
   min-height: 1px;
+}
+.graph-vertical-container .graph-vertical .bar-container .bar.secondary {
+  opacity: 0.33;
+  margin-left: -0.25rem;
 }
 .graph-vertical-container .graph-vertical .bar-container .bar .value {
   position: absolute;
