--- a/css/styles.scss
+++ b/css/styles.scss
@@ -790,7 +790,7 @@ background-color: var(--button-primary);
 .graph-vertical-container {
   margin: 1rem 0 0;
   display: flex;
-  height: 5rem;
+  height: 6rem;
   padding-top: 1rem;
   align-items: stretch;
   justify-content: space-between;
@@ -812,12 +812,17 @@ background-color: var(--button-primary);
     .bar-container {
       flex: 1;
       display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
+      align-items: end;
 
       .bar {
+        flex: 1 1 auto;
         position: relative;
         min-height: 1px;
+
+        &.secondary {
+          opacity: .33;
+          margin-left: -.25rem;
+        }
 
         .value {
           position: absolute;
