--- a/css/styles.css
+++ b/css/styles.css
@@ -149,6 +149,20 @@ h1, .h1 {
   font-size: 2rem;
   letter-spacing: 2px;
 }
+h1 i, .h1 i {
+  display: inline-block;
+  width: 1.33rem;
+  height: 1.33rem;
+  border-radius: 0.66rem;
+  background: var(--found);
+  color: #fff;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-size: 1.5rem;
+  line-height: 1.1rem;
+  position: absolute;
+  top: -0.33rem;
+  right: -1.5rem;
+}
 
 h2, .h2 {
   font-size: 1.25rem;
