--- a/css/styles.scss
+++ b/css/styles.scss
@@ -169,7 +169,7 @@ h1, .h1 {
     width: 1.33rem;
     height: 1.33rem;
     border-radius: 0.66rem;
-    background: var(--found);
+    background: var(--hit);
     color: #fff;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 1.5rem;
