--- a/css/styles.css
+++ b/css/styles.css
@@ -154,7 +154,7 @@ h1 i, .h1 i {
   width: 1.33rem;
   height: 1.33rem;
   border-radius: 0.66rem;
-  background: var(--found);
+  background: var(--hit);
   color: #fff;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   font-size: 1.5rem;
