--- a/css/styles.css
+++ b/css/styles.css
@@ -149,20 +149,6 @@ h1, .h1 {
   font-size: 2rem;
   letter-spacing: 2px;
 }
-h1 i, .h1 i {
-  display: inline-block;
-  width: 1.33rem;
-  height: 1.33rem;
-  border-radius: 0.66rem;
-  background: var(--hit);
-  color: #fff;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  font-size: 1.5rem;
-  line-height: 1.1rem;
-  position: absolute;
-  top: -0.33rem;
-  right: -1.5rem;
-}
 
 h2, .h2 {
   font-size: 1.25rem;
@@ -195,6 +181,36 @@ header h1 {
   left: 50%;
   margin: 0;
   transform: translate(-50%, 0);
+}
+header ul {
+  position: absolute;
+  top: 0.75rem;
+  left: 50%;
+  transform: translate(0, 0);
+  padding: 0;
+  margin: 0 0 0 4.85rem;
+}
+header ul li {
+  display: inline-block;
+  margin-right: 0.2rem;
+}
+header ul li a {
+  display: block;
+  width: 1.5rem;
+  height: 1.5rem;
+  border-radius: 1rem;
+  text-align: center;
+  text-decoration: none;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-style: italic;
+  font-weight: bold;
+  font-size: 1.5rem;
+  line-height: 1.4rem;
+  color: var(--tile-border);
+}
+header ul li a.active {
+  background: var(--hit);
+  color: var(--white);
 }
 header #russianShip {
   display: none;
@@ -299,7 +315,7 @@ header button:hover {
 #board {
   display: flex;
   flex-direction: column;
-  margin: 0 2rem;
+  margin: 0 1rem;
   width: 100%;
   min-width: 250px;
   max-width: 400px;
