--- a/css/styles.css
+++ b/css/styles.css
@@ -138,11 +138,7 @@ h1, .h1, h2, .h2, h3, .h3, h4 {
   margin: 0rem;
 }
 
-h1, .h1 {
-  font-size: 2rem;
-  letter-spacing: 2px;
-}
-h1 em, .h1 em {
+h1 em, .h1 em, h2 em, .h2 em {
   display: block;
   font-family: serif;
   text-transform: none;
@@ -151,6 +147,11 @@ h1 em, .h1 em {
   font-size: 1rem;
   line-height: 1rem;
   margin-top: 2px;
+}
+
+h1, .h1 {
+  font-size: 2rem;
+  letter-spacing: 2px;
 }
 
 h2, .h2 {
