--- a/css/styles.css
+++ b/css/styles.css
@@ -352,6 +352,7 @@ header #btn-settings {
 }
 
 #board-container {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -956,18 +957,22 @@ header #btn-settings {
 }
 
 .alert {
-  position: fixed;
+  display: flex;
+  position: absolute;
   bottom: 0;
-  margin-left: 50%;
   padding: 0.5rem 1rem;
-  transform: translate(-50%, -50%);
   border-radius: var(--border-radius-button);
   text-align: center;
   z-index: 10000;
-  animation: fadeout 3s forwards linear;
   white-space: nowrap;
   background-color: var(--text);
   color: var(--text-inverted);
+}
+.alert.tmp {
+  animation: fadeout 3s forwards linear;
+}
+.alert button svg {
+  fill: var(--icon);
 }
 
 @keyframes fadeout {
