--- a/css/styles.scss
+++ b/css/styles.scss
@@ -218,7 +218,8 @@ header {
   }
 
   #selector-editions {
-    order: 2;
+    order: 4;
+    margin-right: 1.5rem;
     position: relative;
 
     .button {
@@ -295,7 +296,7 @@ header {
   }
   
   #btn-settings {
-    order: 5;
+    order: 2;
   }
 }
 
@@ -395,6 +396,7 @@ header {
 }
 
 #board-container {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1061,10 +1063,13 @@ background-color: var(--button-primary);
 }
 
 #try-different-edition {
-  margin: 1rem -1.5rem -0.25rem;
-  padding: 1rem 1.5rem 0;
+  padding: 1rem 1.5rem 0.5rem;
   border-top: 1px solid var(--border);
   text-align: center;
+
+  &.inset {
+    margin: 1rem -1.5rem -0.5rem;
+  }
 
   h3 {
     margin-top: .15rem;
@@ -1087,18 +1092,26 @@ background-color: var(--button-primary);
 }
 
 .alert {
-  position: fixed;
+  display: flex;
+  position: absolute;
   bottom: 0;
-  margin-left: 50%;
   padding: .5rem 1rem;
-  transform: translate(-50%, -50%);
   border-radius: var(--border-radius-button);
   text-align: center;
   z-index: 10000;
-  animation: fadeout 3s forwards linear;
   white-space: nowrap;
   background-color: var(--text);
   color: var(--text-inverted);
+
+  &.tmp {
+    animation: fadeout 3s forwards linear;
+  }
+
+  button {
+    svg {
+      fill: var(--icon);
+    }
+  }
 }
 
 @keyframes fadeout {
