--- a/css/styles.css
+++ b/css/styles.css
@@ -837,6 +837,20 @@ header #btn-settings {
   font-size: 0.75rem;
   white-space: nowrap;
 }
+.graph-vertical-container.compact .graph-vertical {
+  margin-left: 2px;
+  margin-right: 2px;
+}
+.graph-vertical-container.compact .graph-vertical .bar-container .bar .value,
+.graph-vertical-container.compact .graph-vertical .label {
+  font-size: 0.6rem;
+}
+.graph-vertical-container.compact .graph-vertical .bar-container .bar .value {
+  top: -0.8rem;
+}
+.graph-vertical-container.compact .graph-vertical .label {
+  bottom: -1.1rem;
+}
 
 .graph-horizontal {
   display: flex;
