--- a/css/styles.css
+++ b/css/styles.css
@@ -1063,4 +1063,4 @@ header #btn-settings {
   .graph-vertical-container.compact .graph-vertical .label {
     font-size: 0.5rem;
   }
-}
+}/*# sourceMappingURL=styles.css.map */
